--- a/neutron-vpn-agent.service
+++ b/neutron-vpn-agent.service
@@ -5,7 +5,7 @@ After=syslog.target network.target
 [Service]
 Type=simple
 User=neutron
-ExecStart=/usr/bin/neutron-vpn-agent --config-file /usr/share/neutron/neutron-dist.conf --config-file /etc/neutron/neutron.conf --config-dir /etc/neutron/l3_agent --log-file /var/log/neutron/vpn-agent.log
+ExecStart=/usr/bin/neutron-vpn-agent --config-file /usr/share/neutron/neutron-dist.conf --config-file /etc/neutron/neutron.conf --config-dir /usr/share/neutron/l3_agent --log-file /var/log/neutron/vpn-agent.log
 PrivateTmp=false
 KillMode=process
 
