--- a/project.config
+++ b/project.config
@@ -2,20 +2,25 @@
 	description = Packaging content for neutron (distgit)
 [access "refs/*"]
   read = group openstack/neutron-vpnaas-distgit-core
+  read = group rdo-core
   owner = group openstack/neutron-vpnaas-distgit-ptl
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group openstack/neutron-vpnaas-distgit-core
+	label-Code-Review = -2..+2 group rdo-core
 	label-Code-Review = -2..+2 group openstack/neutron-vpnaas-distgit-ptl
 	label-Verified = -2..+2 group openstack/neutron-vpnaas-distgit-ptl
 	label-Workflow = -1..+1 group openstack/neutron-vpnaas-distgit-core
+	label-Workflow = -1..+1 group rdo-core
 	label-Workflow = -1..+1 group openstack/neutron-vpnaas-distgit-ptl
 	label-Workflow = -1..+0 group Registered Users
 	submit = group openstack/neutron-vpnaas-distgit-ptl
 	read = group Registered Users
     read = group openstack/neutron-vpnaas-distgit-core
+    read = group rdo-core
 [access "refs/meta/config"]
     read = group Registered Users
     read = group openstack/neutron-vpnaas-distgit-core
+    read = group rdo-core
 [receive]
 	requireChangeId = true
 [submit]
